leaderboard fixed on mobile

--- a/components/home/leaderboard.module.scss
+++ b/components/home/leaderboard.module.scss
@@ -37,6 +37,7 @@
     }
 
     .tabsContent {
+      overflow: scroll;
       margin: 20px 0;
     }
   }
